uní todas las comparaciones de GRASP porque no veo útil diferenciarlas

--- a/tp3/informe/Comparaciones.tex
+++ b/tp3/informe/Comparaciones.tex
@@ -29,7 +29,11 @@ Cuál de ellos es una pregunta que debe ser respondida según la situación y la
 
 Por un lado, si sólo se desea encontrar un conjunto dominante, podemos utilizar la solución golosa, que es la más rápida de las 3 ya que no depende de ninguna otra solución. Por su parte, si la instancia es muy grande, pero deseamos que la solución sea lo más óptima posible, y que el tiempo de resolución sea polinomial, debemos utilizar la búsqueda local, ya que ha demostrado ser al menos tan mala como la solución greedy, aún en casos cuando la solución que le pasamos es el grafo entero (es decir, tomamos como conjunto dominante a todo el grafo, por más malo que eso sea). 
 
-\subsection{Exacto - GRASP}
+
+\subsection{Exacto - Goloso - Local Search - GRASP}
 
 
-\subsection{Goloso - Local Search - GRASP}
+\begin{center}
+%  \includegraphics[width=15cm]{./graficos/asdasdasdsd.png}
+\end{center}
+
