uní todas las comparaciones de GRASP porque no veo útil diferenciarlas

--- a/tp3/informe/Comparaciones.tex
+++ b/tp3/informe/Comparaciones.tex
@@ -33,6 +33,7 @@ Por un lado, si sólo se desea encontrar un conjunto dominante, podemos utilizar
 \subsection{Exacto - Goloso - Local Search - GRASP}
 
 
+Corremos el grafo con k = 15 ya que como vimos antes no hay una gran variacion de tiempo de procesamiento
 \begin{center}
 %  \includegraphics[width=15cm]{./graficos/asdasdasdsd.png}
 \end{center}
