--- a/tp3/informe/Comparaciones.tex
+++ b/tp3/informe/Comparaciones.tex
@@ -35,6 +35,6 @@ Por un lado, si sólo se desea encontrar un conjunto dominante, podemos utilizar
 
 Corremos el grafo con k = 15 ya que como vimos antes no hay una gran variacion de tiempo de procesamiento
 \begin{center}
-%  \includegraphics[width=15cm]{./graficos/asdasdasdsd.png}
+  \includegraphics[width=15cm]{./graficos/todosVStodos.png}
 \end{center}
 
