--- a/trunk/tp3/informe/Comparaciones.tex
+++ b/trunk/tp3/informe/Comparaciones.tex
@@ -40,4 +40,4 @@ Corremos distintos grafos con GRASP k=15, y los mismos grafos con los otros algo
 Como vimos antes no hay una gran variacion de tiempo de procesamiento más allá la diferencia entre la exponencialidad del Exacto contra la polinomialidad del resto, por lo tanto queremos aclarar que en caso de tener que resolver este
 problema a través de una Heurística, fuertemente recomendamos ejecutar GRASP, ya que no existe gran diferencia de tiempos, y el algoritmo en el peor de los casos devuelve la misma cantidad de nodos que el goloso. Sin embargo, como ya 
 mencionamos antes la cantidad de soluciones que puede devolver el GRASP se ve multiplicada por k, y a cada una de estas k soluciones se lo intenta mejorar localmente. Es por eso que, si sabés datos de la entrada 
-del grafo en donde greedy pueda llegar a devolver un resultado lejos del exacto, es recomendable utilziar GRASP ya que aumentás las posibilidades y probabilísticamente podés conseguir una mejor solución.
+del grafo en donde greedy pueda llegar a devolver un resultado lejos del exacto, es recomendable utilizar GRASP ya que aumentás las posibilidades y probabilísticamente podés conseguir una mejor solución.
