--- a/tp3/informe/Desarrollo3.tex
+++ b/tp3/informe/Desarrollo3.tex
@@ -17,7 +17,7 @@ Para ello nos basamos en una estrategia de selección de nodos dominantes, la cu
 \li 		Saco de la lista de vértices al elegido \RComment O(n)
 \li 		Actualizo los nodos del grafo, disminuyendo la cantidad de \textit{grado sin dominar} de los adyacentes al elegido,\\ y de los adyacentes a estos. \RComment O($n^2$)
 \End
-\li	return \textbf{dominantes}
+\li	\textbf{return} dominantes
 \end{codebox}
 
 \subsection{Orden de complejidad}
