--- a/trunk/tp3/informe/Desarrollo5.tex
+++ b/trunk/tp3/informe/Desarrollo5.tex
@@ -31,6 +31,7 @@ A continuación se agrega el cambio hecho en el algoritmo greedy para aleatoriza
 \Procname{$\proc{elegirVertice}$ (\textbf{in} $ListaVerticesORdenada$, \textbf{in} $k$)}{proxVertice}{Vertice}	
 \li     \textbf{Si} k $>$ $|$ListaVerticesORdenada$|$ \Do
 \li 		k = $|$ListaVerticesORdenada$|$;
+\End
 \li 	posiciónAElegir = random(0,k);
 \li	proxVertice = ListaVerticesORdenada[posiciónAElegir]
 \li 	\textbf{return} proxVertice
