--- a/trunk/tp3/informe/Desarrollo3.tex
+++ b/trunk/tp3/informe/Desarrollo3.tex
@@ -37,8 +37,7 @@ Para ello nos basamos en una estrategia de selección de nodos dominantes, la cu
 \li 			Decremento en uno el grado de adyacentes sin dominar del nodo actual \End
 \li 		\textbf{Si} el nodo actual \textit{elegido} no estaba dominado \Do
 \li 			Agrego los nodos adyacentes a la lista \textit{unionDeAdyacentes} \End
-\li 		Marco al nodo actual como dominado. \End
-\li 	\RComent Recorro la lista unionDeAdyacentes para actualizar el grado de nodos adyacentes sin dominar
+\li 		Marco al nodo actual como dominado. \End \RComment Recorro la lista unionDeAdyacentes para actualizar el grado de nodos adyacentes sin dominar 	 
 \li 	\textbf{Mientras} haya vértices en la lista unionDeAdyacentes \Do
 \li 			Decremento en uno el grado de adyacentes sin dominar del nodo actual \End
 \end{codebox}
