--- a/tp3/informe/Desarrollo3.tex
+++ b/tp3/informe/Desarrollo3.tex
@@ -29,7 +29,7 @@ Para ello nos basamos en una estrategia de selección de nodos dominantes, la cu
 \end{codebox}
 
 \begin{codebox}
-\Procname{$\proc{ActualizarGradoSinDominar}$ (\textbf{in} $Vertice elegido$)}
+\Procname{$\proc{ActualizarGradoSinDominar}$ (\textbf{in} $Vertice elegido$)}{}{}
 \li 	Marcar al vértice elegido como dominado.
 \li 	unionDeAdyacentes = lista de vértices vacia, que luego se usará para actualizar.
 \li 	\textbf{Mientras} haya vértices en la lista de adyacentes al \textbf{elegido} \Do
@@ -37,9 +37,9 @@ Para ello nos basamos en una estrategia de selección de nodos dominantes, la cu
 \li 			Decremento en uno el grado de adyacentes sin dominar del nodo actual \End
 \li 		\textbf{Si} el nodo actual \textit{elegido} no estaba dominado \Do
 \li 			Agrego los nodos adyacentes a la lista \textit{unionDeAdyacentes} \End
-\li 		Marco al nodo actual como dominado. \End \RComment Recorro la lista unionDeAdyacentes para actualizar el grado de nodos adyacentes sin dominar 	 
-\li 	\textbf{Mientras} haya vértices en la lista unionDeAdyacentes \Do
-\li 			Decremento en uno el grado de adyacentes sin dominar del nodo actual \End
+\li 		Marco al nodo actual como dominado. \End
+\li 	\textbf{Mientras} haya vértices en la lista unionDeAdyacentes \Do 
+\li 			Decremento en uno el grado de adyacentes sin dominar del nodo actual \End %\RComment Recorro unionDeAdyacentes para actualizar\\  el grado de nodos adyacentes sin dominar
 \end{codebox}
 
 \subsection{Orden de complejidad}
