--- a/trunk/tp3/informe/Desarrollo5.tex
+++ b/trunk/tp3/informe/Desarrollo5.tex
@@ -1,6 +1,6 @@
 \section{Algoritmo GRASP}
 
-\subsection{Introducción}
+\subsection{Solución}
 La idea de este algoritmo es ejecutar una serie de veces nuestro algoritmo GREEDY randomizado y mejorarlo con la búsqueda local, guardando la mejor solución hasta el momento.
 Esa randomización se debe a que el método por el cuál dicho algoritmo goloso elige siempre el mejor valor bajo su criterio, es ahora aleatorizada seleccionando al azar entre los primeros k elementos de la
 lista de nodos a ser considerado dominante.\\
