--- a/tp3/informe/Desarrollo2.tex
+++ b/tp3/informe/Desarrollo2.tex
@@ -56,6 +56,9 @@ global grafoOriginal
 \li	\textbf{return} true
 \End
 \end{codebox}
+
+\section{Análisis de Complejidad}
+
 La complejidad de mi algoritmo es de $2^n$ * $n^3$. Voy a demostrarlo por inducción:\\
 
 \underline{Caso Base:}\\
