--- a/trunk/tp3/informe/Desarrollo2.tex
+++ b/trunk/tp3/informe/Desarrollo2.tex
@@ -57,7 +57,7 @@ global grafoOriginal
 \End
 \end{codebox}
 
-\section{Análisis de Complejidad}
+\subsection{Análisis de Complejidad}
 
 La complejidad de mi algoritmo es de $2^n$ * $n^3$. Voy a demostrarlo por inducción:\\
 
