--- a/trunk/tp3/informe/Desarrollo3.tex
+++ b/trunk/tp3/informe/Desarrollo3.tex
@@ -42,7 +42,7 @@ Para ello nos basamos en una estrategia de selección de nodos dominantes, la cu
 \li 			Decremento en uno el grado de adyacentes sin dominar del nodo actual \End %\RComment Recorro unionDeAdyacentes para actualizar\\  el grado de nodos adyacentes sin dominar
 \end{codebox}
 
-\section{Análisis de Complejidad}
+\subsection{Análisis de Complejidad}
 
 La complejidad del algoritmo es de O($n^3$)
 
