--- a/tp3/informe/Desarrollo3.tex
+++ b/tp3/informe/Desarrollo3.tex
@@ -29,7 +29,7 @@ Para ello nos basamos en una estrategia de selección de nodos dominantes, la cu
 \end{codebox}
 
 \begin{codebox}
-\Procname{$\proc{ActualizarGradoSinDominar}$ (\textbf{in} $Vertice elegido$)}{}{}
+\Procname{$\proc{ActualizarGradoSinDominar}$ (\textbf{in} $Vertice$ $elegido$)}{}{}
 \li 	Marcar al vértice elegido como dominado.
 \li 	unionDeAdyacentes = lista de vértices vacia, que luego se usará para actualizar.
 \li 	\textbf{Mientras} haya vértices en la lista de adyacentes al \textbf{elegido} \Do
